--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://andrii-lazarenko.com/"
+baseURL = "http://andrii-lazarenko.com/"
 defaultContentLanguage = "ru"
 theme = "hugo-initio"
 enableRobotsTXT = true
