fixed title of personal brand

--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ enableRobotsTXT = true
   languageName = "Укр"
   title = "Андрій Лазаренко - оргетерапевт. Інтегративна психотерапія гештальт і культурно-історичного підходів"
   name = "Андрій Лазаренко"
-  description = "Оргетерапевт. Інтегративна психотерапія гештальт і культурно-історичного підходів"
+  description = "Психолог. Психотерапевт. Оргтерапевт"
   email = "andrii.lazarenko.psy@gmail.com"
   phone = "+38 066 74 39 713"
 
@@ -50,7 +50,7 @@ enableRobotsTXT = true
   languageName = "Рус"
   title = "Андрей Лазаренко - психолог. Интегративная психотерапия."
   name = "Андрей Лазаренко"
-  description = "Психолог. Гештальт-терапевт. Оргтерапевт."
+  description = "Психолог. Психотерапевт. Оргтерапевт."
   email = "andrii.lazarenko.psy@gmail.com"
   phone = "+38 066 74 39 713"
   
