fixed title of personal brand

--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ enableRobotsTXT = true
 
 [languages.ua]
   languageName = "Укр"
-  title = "Андрій Лазаренко - оргетерапевт. Інтегративна психотерапія гештальт і культурно-історичного підходів"
+  title = "Андрій Лазаренко - психолог. Інтегративна психотерапія гештальт і культурно-історичного підходів"
   name = "Андрій Лазаренко"
   description = "Психолог. Психотерапевт. Оргтерапевт"
   email = "andrii.lazarenko.psy@gmail.com"
@@ -48,7 +48,7 @@ enableRobotsTXT = true
 
 [languages.ru]
   languageName = "Рус"
-  title = "Андрей Лазаренко - психолог. Интегративная психотерапия."
+  title = "Андрей Лазаренко - психолог. Интегративная психотерапия гештальт и культурно-исторического подходов."
   name = "Андрей Лазаренко"
   description = "Психолог. Психотерапевт. Оргтерапевт."
   email = "andrii.lazarenko.psy@gmail.com"
