articles for and from LinkedIn

--- a/config.toml
+++ b/config.toml
@@ -9,6 +9,7 @@ enableRobotsTXT = true
   languageName = "Укр"
   title = "Андрій Лазаренко - психолог. Інтегративна психотерапія гештальт і культурно-історичного підходів"
   name = "Андрій Лазаренко"
+  copyright = "Всі права збережені за правовласником. Будь-яке використання матеріалів з цього сайту можливе тільки з посиланням на джерело."
   description = "Психолог. Психотерапевт. Оргтерапевт"
   email = "andrii.lazarenko.psy@gmail.com"
   phone = "+380 (98) 121 32 37"
@@ -64,6 +65,7 @@ enableRobotsTXT = true
   languageName = "Рус"
   title = "Андрей Лазаренко - психолог. Интегративная психотерапия гештальт и культурно-исторического подходов."
   name = "Андрей Лазаренко"
+  copyright = "Все права сохранены за правообладателем. Любое использование материалов с этого сайта возможно только с указанием ссылки на источник."
   description = "Психолог. Психотерапевт. Оргтерапевт."
   email = "andrii.lazarenko.psy@gmail.com"
   phone = "+380 (98) 121 32 37"
